--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.5",
+    "vite": "^6.0.3",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "~2.5.8"
   },
-  "type": "module"
+  "type": "module",
+  "description": "- 동적요소를 활용한 사용자 상호작용으로 흥미 및 관심 유발\r - 브랜드 이점을 강조, 지속적으로 노출하여 구매욕 자극\r - 사용자가 원하는 정보를 쉽게 얻을 수 있도록 정보 용이성 강화",
+  "main": "vite.config.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "author": "",
+  "license": "ISC"
 }
